editor-components/hero-section/hero-section8/hero-section8.module.scss
@use '../../../composer-base-components/base/utitilities/viewports.module.scss' as *;
@keyframes slideBlur {
  0% {
    filter: blur(15px);
    transform: translateX(100%);
  }
  100% {
    filter: blur(0px);
    transform: translateX(0);
  }
}
.container {
  width: 100%;
  position: relative;
  padding: 0px;
  min-height: 100px;
  .carousel {
    width: 100%;
    &.no-image{
      position: static !important;
    }
    :global(.slick-active) {
      z-index: 1 !important;
    }
    .slide {
      width: 100%;
      height: 100vh;
    
      .image-wrapper{
        position: relative;
        height: 100%;
        width: 100%;
    
        &::after {
          background-color: transparent;
          content: "";
          width: 100%;
          height: 100%;
          position: absolute;
          left: 0;
          top: 0;
        }
        &.overlay{
          &::after {
            background-color: var(--composer-overlay-color);
          }
        }
      }
    
      .image {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
  
      &.active {
        filter: blur(0px);
        transform: translateX(0);
    
        .image {
          clip-path: inset(0);
          animation: slideBlur 1s forwards;
        }
    
        .image-overlay {
          clip-path: inset(0);
          animation: slideBlur 1s forwards;
        }
      }
    
      &.no-image {
        height: 100%;
      }
    
      &.disabled-animate {
        &.active{
          transform: none;
          .image{
            animation:none;
          }
          .image-overlay{
            animation: none;
          }
        }

      }
    }
  }
  .max-content{
    width: 100%;
    position: absolute;
    bottom: 0px;
    left: 50%;
    transform: translateX(-50%);
    padding: 20px 50px;
    background-color: transparent;
    .info-box {
      display: flex;
      flex-direction: column;
      gap: var(--composer-gap-md);
      color: white;
      &.no-image{
        color: var(--composer-font-color-primary);
        .line {
          border-bottom: 1px solid rgba(var(--composer-font-color-primary-rgb), 0.2);
        }
        .pagination {
          color: var(--composer-font-color-primary);
        }
      }
      &.active {
        opacity: 1;
        .tag {
          opacity: 1;
          transform: scale(1);
        }
        .description {
          opacity: 1;
          transition: all 1s cubic-bezier(0.34, 1.56, 0.64, 1) 0.5s;
          transform: scale(1);
        }
      }
      .tag {
        font-size: 1.5rem;
      }
      .title {
        font-size: 4rem;
      }
      .line {
        border-bottom: 1px solid hsla(0, 0%, 100%, .07);
      }
      .description {
        font-size: 2rem;
      }

    .pagination {
      text-align: center;
      width: 100%;
      display: flex;
      justify-content: center;
      align-items: center;
      color: white;
      padding-top: var(--composer-gap-md);

      .current-page {
        font-size: 1.5rem;
      }

      .slash {
        padding: 0px var(--composer-gap-sm);
        font-size: 3rem;
      }

      .total-page {
        font-size: 2rem;
      }
    }
    }

  }
  .arrow-wrapper{
    display: flex;
    justify-content: space-between;
    .arrow-prev-wrapper, .arrow-next-wrapper{
      position: relative;
      .arrow-prev, .arrow-next{
        width: 40px;
        height: 40px;
        display: flex;
        justify-content: center;
        align-items: center;
        cursor: pointer;
        transition: transform 0.3s ease-in;
        .icon{
          font-size: 1.5rem;
        }
      }
      &::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        border: 1px solid hsla(0, 0%, 100%, .07);
        border-radius: 100%;
        box-sizing: border-box;
        z-index: 20;
        transition: transform 0.3s ease, border-color 0.3s ease;
      }      
      &::after {
        content: '';
        position: absolute;
        top: 50%;
        width: 40px;
        height: 1px;
        background-color: hsla(0, 0%, 100%, .07);
        z-index: 20;
      }
      &.next{
        &::after {
          left: -40px;
        }
      }
      &.no-image{
        &::after {
          background-color: rgba(var(--composer-font-color-primary-rgb), 0.2);
        }
        &::before{
          border: 1px solid rgba(var(--composer-font-color-primary-rgb), 0.2);
        }
      }
      &.prev{
        &::after {
          right: -40px;
        }      
      }
      &:hover{
        .arrow-prev{
          transform: translateX(-20px);
        } 
        .arrow-next{
          transform: translateX(20px);
        }      
      }
    }
  }

}

@container (max-width: #{$composer-tablet-width}){
  .container{
    .carousel {
      .arrow-wrapper{
        .arrow-prev-wrapper, .arrow-next-wrapper{
          &.next{
            &::after {
              left: -30px;
            }
          }
          &.prev{
            &::after {
              right: -30px;
            }      
          }
        }
      }
    }
    .max-content{
      padding: 20px 40px;
    }
  }
}
@container (max-width: #{$composer-phone-width}){
  .container{
    .carousel{
      .arrow-wrapper{
        .arrow-prev-wrapper, .arrow-next-wrapper{
          &.next{
            &::after {
              left: -20px;
            }
          }
          &.prev{
            &::after {
              right: -20px;
            }      
          }
        }
      }
    }
    .max-content{
      padding: 20px;
      .info-box{
        .tag{
          font-size: 1rem;
        }
        .title{
          font-size: 2.5rem;
        }
        .description{
          font-size: 1.5rem;
        }
        .pagination{
          .current-page{
            font-size: 1rem;
          }
          .slash{
            font-size: 2rem;
          }
          .total-page{
            font-size: 1.5rem;
          }
        }
      }
    }
  }
}

